# 2023_1_VIVE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Messages/: CMakeLists.txt
game/: CMakeLists.txt
game/Button/: Button.cpp  Button.hpp  CMakeLists.txt
game/CollisionHandler/: CMakeLists.txt  collision_handler.cpp  collision_handler.hpp
game/CollisionHandler/tests/: CMakeLists.txt
game/CollisionHandler/tests/src/: collision_tests.cpp  test_collision.cpp
game/Game/: CMakeLists.txt  Game.cpp  Game.hpp  game.cpp  game.hpp
game/Game/include/: Game.hpp
game/Game/src/: Game.cpp
game/Menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
game/actions/: CMakeLists.txt
game/actions/Attack/: CMakeLists.txt  attack.cpp  attack.hpp
game/actions/IAction/: CMakeLists.txt  i_action.cpp  i_action.hpp
game/animation/: CMakeLists.txt
game/animation/EntityAnimation/: CMakeLists.txt  entity_animation.cpp  entity_animation.hpp
game/animation/IAnimatable/: CMakeLists.txt  i_animatable.cpp  i_animatable.hpp
game/animation/animation/: CMakeLists.txt  animation.cpp  animation.hpp
game/animation/config/: boss_animation.txt  enemy_animation.txt  fire_ball_animation.txt  player_animation.txt
game/animation/iAnimation/: CMakeLists.txt  i_animation.hpp
game/assetManager/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp
game/assetManager/config/: level1_1.txt  level1_2.txt  level_1.txt  main_menu.txt
game/assetManager/data/: level1_1.txt  level_1.txt
game/cameraTarget/: CMakeLists.txt  camera_target.cpp  camera_target.hpp
game/cameraTarget/ICamera/: CMakeLists.txt  i_camera.cpp  i_camera.hpp
game/cameraTarget/camera/: CMakeLists.txt  camera.cpp  camera.hpp
game/client/: CMakeLists.txt
game/client/include/: client.hpp  client_connection.hpp  read_from_server_signal.hpp
game/client/src/: client.cpp  client_connection.cpp  read_from_server_signal.cpp
game/client/tests/: CMakeLists.txt  test_main.cpp
game/gameSound/: CMakeLists.txt
game/gameSound/ISound/: CMakeLists.txt  i_sound.cpp  i_sound.hpp
game/gameSound/sound/: CMakeLists.txt  sound.cpp  sound.hpp
game/game_engine/: CMakeLists.txt
game/game_engine/include/: game.hpp
game/game_engine/src/: game.cpp
game/level/: CMakeLists.txt
game/level/data/: lvl-1-1  lvl-1-2
game/level/include/: level.hpp  level_manager.hpp  sub_level.hpp
game/level/src/: level.cpp  level_manager.cpp  sub_level.cpp  sublevel.cpp
game/managerForAssets/: CMakeLists.txt
game/managerForAssets/IAssetManager/: CMakeLists.txt  i_asset_manager.cpp  i_asset_manager.hpp
game/managerForAssets/assetManager/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp
game/objects/: CMakeLists.txt
game/objects/BackGround/: CMakeLists.txt  background.cpp  background.hpp
game/objects/Boss/: CMakeLists.txt  boss.cpp  boss.hpp
game/objects/Boss/tests/: CMakeLists.txt
game/objects/Enemy/: CMakeLists.txt  enemy.cpp  enemy.hpp
game/objects/Enemy/tests/: CMakeLists.txt
game/objects/Entity/: CMakeLists.txt  entity.cpp  entity.hpp
game/objects/Entity/include/: Entity.hpp
game/objects/Entity/src/: Entity.cpp
game/objects/HitBox/: CMakeLists.txt  hit_box.cpp  hit_box.hpp
game/objects/IObject/: CMakeLists.txt  i_object.cpp  i_object.hpp
game/objects/Inventory/: CMakeLists.txt  inventory.cpp  inventory.hpp
game/objects/Item/: CMakeLists.txt  item.cpp  item.hpp
game/objects/MovableObject/: CMakeLists.txt  movable_object.cpp  movable_object.hpp
game/objects/Object/: CMakeLists.txt  object.cpp  object.hpp
game/objects/Particle/: CMakeLists.txt  particle.cpp  particle.hpp
game/objects/ParticleSet/: CMakeLists.txt  particle_set.cpp  particle_set.hpp
game/objects/PhysicalObject/: CMakeLists.txt  physical_object.cpp  physical_object.hpp
game/objects/Player/: CMakeLists.txt  player.cpp  player.hpp
game/objects/Text/: CMakeLists.txt  text.cpp  text.hpp
game/objects/Tile/: CMakeLists.txt  tile.cpp  tile.hpp
game/objects/Trigger/: CMakeLists.txt  trigger.cpp  trigger.hpp
game/objects/button/: CMakeLists.txt
game/objects/object/: CMakeLists.txt  iobject.cpp  iobject.hpp
game/playerUserInterface/: CMakeLists.txt
game/playerUserInterface/INavigationIcons/: CMakeLists.txt  i_navigation_icons.cpp  i_navigation_icons.hpp
game/playerUserInterface/IStatus/: CMakeLists.txt  i_status.cpp  i_status.hpp
game/playerUserInterface/IStatusBar/: CMakeLists.txt  i_status_bar.cpp  i_status_bar.hpp
game/playerUserInterface/navigationIcons/: CMakeLists.txt  navigation_icons.cpp  navigation_icons.hpp
game/playerUserInterface/playerUserInterface/: CMakeLists.txt  player_user_interface.cpp  player_user_interface.hpp
game/playerUserInterface/statusBar/: CMakeLists.txt  status_bar.cpp  status_bar.hpp
game/playerUserInterface/statusExpirience/: CMakeLists.txt  status_expirience.cpp  status_expirience.hpp
game/playerUserInterface/statusMoney/: CMakeLists.txt  status_money.cpp  status_money.hpp
game/playerUserInterface/statusWeapon/: CMakeLists.txt  status_weapon.cpp  status_weapon.hpp
game/saving/: CMakeLists.txt
game/saving/include/: save_manager.hpp
game/saving/src/: save_manager.cpp
game/settings/: CMakeLists.txt
game/settings/ISettings/: CMakeLists.txt  i_settings.cpp  i_settings.hpp
game/settings/settings/: CMakeLists.txt  settings.cpp  settings.hpp
game/sound/: CMakeLists.txt
game/sound/iSound/: CMakeLists.txt  i_sound.hpp  sound_type.hpp
game/sound/sound/: CMakeLists.txt  sound.cpp  sound.hpp
game/state/: CMakeLists.txt
game/state/include/: coop_state.hpp  game_state.hpp  host_coop_state.hpp  init_multiplayer_state.hpp  join_state.hpp  main_menu_state.hpp  single_state.hpp  state.hpp  state_manager.hpp
game/state/src/: coop_state.cpp  game_state.cpp  host_coop_state.cpp  init_multiplayer_state.cpp  join_state.cpp  main_menu_state.cpp  single_state.cpp  state.cpp  state_manager.cpp
libs/Physics/: CMakeLists.txt
libs/Physics/include/: Physics.hpp
libs/Physics/src/: Physics.cpp
objects/Player/: CMakeLists.txt
objects/Player/include/: Player.hpp
objects/Player/src/: Player.cpp
(+79 files in other folders)
