add_subdirectory(HitBox/)
add_subdirectory(Object/)
add_subdirectory(button)
# add_subdirectory(ObjectManager/)
add_subdirectory(PhysicalObject/)
add_subdirectory(MovableObject/)
add_subdirectory(Entity/)
add_subdirectory(Player/)
add_subdirectory(Enemy/)
add_subdirectory(Boss/)
add_subdirectory(Particle/)
add_subdirectory(ParticleSet/)
add_subdirectory(Item/)
add_subdirectory(Inventory/)
add_subdirectory(Tile/)
add_subdirectory(Trigger/)
add_subdirectory(BackGround/)
add_subdirectory(Text)


target_include_directories(hit_box PUBLIC HitBox)
target_include_directories(object PUBLIC Object)
# target_include_directories(object_manager PUBLIC ObjectManager)
target_include_directories(physical_object PUBLIC PhysicalObject)
target_include_directories(movable_object PUBLIC MovableObject)
target_include_directories(text_object PUBLIC Text)
target_include_directories(entity PUBLIC Entity)
target_include_directories(player PUBLIC Player)
target_include_directories(enemy PUBLIC Enemy)
target_include_directories(boss PUBLIC Boss)
target_include_directories(particle PUBLIC Particle)
target_include_directories(particle_set PUBLIC ParticleSet)
target_include_directories(item PUBLIC Item)
target_include_directories(inventory PUBLIC Inventory)
target_include_directories(tile PUBLIC Tile)
target_include_directories(trigger PUBLIC Trigger)
target_include_directories(background PUBLIC BackGround)
